# JaxNRSur

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: run-tests.yml
docs/: index.md  requirements.txt
example/: FD_explaination.ipynb  Introduction.ipynb  NR7dq4_developing_notebook.ipynb  jax_experiment_fd.ipynb  model_gradient.ipynb  simple_example.ipynb  test_script.py
jaxNRSur/: DataLoader.py  EIMPredictor.py  Harmonics.py  Kernels.py  PolyPredictor.py  Spline.py  SurrogateModel.py  spline.py
joss/: paper.bib  paper.md
src/jaxNRSur/: DataLoader.py  Harmonics.py  PolyPredictor.py  Spline.py  SurrogateModel.py
src/jaxnrsur/: DataLoader.py  EIMPredictor.py  Harmonics.py  Kernels.py  NRHybSur3dq8.py  NRSur7dq4.py  PolyPredictor.py  Spline.py  SurrogateModel.py  __init__.py  jaxnrsur.py  special_function.py
test/: gen_test_data.py  model_comparison.py  test_NRHybSur3dq8.py  test_NRSur7dq4.py  test_cross_check.py  test_harmonics.py  test_jaxnrsur.py  test_kernels.py  test_script.py  test_special_function.py  test_spline.py  test_wf_dynamics.ipynb
test/unit/: gen_test_data.py  test_NRSur7dq4.py  test_cross_check.py  test_spline.py
