[project]
name = "jaxNRSur"
version = "0.0.1"
description = "Numerical relativity surrogate model for gravitational waveforms in Jax"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Kaze Wong", email = "kazewong.physics@gmail.com"},
    {name = "Max isi"},
    {name = "Ethan Payne"},
]
keywords = ["gravitational-wave", "Numerical relativity", "autodiff", "jax"]
license = {text = "MIT"}
dependencies = [
    "equinox>=0.12.1",
    "h5py>=3.13.0",
    "jax>=0.6.0",
    "lineax>=0.0.8",
    "requests>=2.32.3",
]

[project.urls]
Homepage = "https://github.com/kazewong/JaxNRSur"
Repository = "https://github.com/kazewong/JaxNRSur"

[project.optional-dependencies]
cuda = [
    "jax[cuda]>=0.6.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jaxnrsur",
    "matplotlib>=3.10.3",
    "ipykernel>=6.29.5",
    "ipython>=9.2.0",
    "tensorboard-plugin-profile>=2.19.6",
    "tensorflow>=2.19.0",
]

docs = [
    "mkdocs-gen-files==0.5.0",
    "mkdocs-jupyter==0.25.1",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-material==9.5.47",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.27.0",
    "pymdown-extensions==10.12",
]

[tool.uv.sources]
jaxnrsur = { workspace = true }


