[metadata]
name = JaxNRSur
version = 0.0.1
author = Kaze Wong, Max isi, contributor
author_email = kazewong.physics@gmail.com
url = https://github.com/kazewong/JaxNRSur
description = Numerical relativity surrogate model for gravitational waveforms in Jax
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gravitational-wave, Numerical relativity, autodiff, jax
license = MIT

[options]
packages_dir= ./
packages = find:
install_requires =
    jax>=0.4.12
    jaxlib>=0.4.12
    equinox>=0.10.6
    lineax
    
python_requires =  >=3.9


